--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "A google books search react app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -18,7 +24,9 @@
   "homepage": "https://github.com/Sauda281/Google-React-Book#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "concurrently": "^5.2.0",
     "dotenv": "^8.2.0",
+    "if-env": "^1.0.4",
     "mongoose": "^5.9.16",
     "react-router-dom": "^5.2.0",
     "socket.io": "^2.3.0"
